<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mmp.mymapdiary.data.main.MainViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/main_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <Button
            android:id="@+id/button_goToFreeTryFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:paddingVertical="10dp"
            android:text="@string/freeTry_allCaps" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_noticesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_goToFreeTryFragment"
            android:paddingVertical="10dp" />

        <LinearLayout
            android:id="@+id/main_expressMainViewModel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_noticesList"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/main_expressMainViewModel_text"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.viewModelText}" />

            <TextView
                android:id="@+id/main_expressMainViewModel_test1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@{Integer.toString(viewModel.viewModelCounter)}"
                android:textAlignment="viewEnd" />

            <Button
                android:id="@+id/main_expressMainViewModel_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.decrease()}"
                android:text="@string/minus" />

            <Button
                android:id="@+id/main_expressMainViewModel_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.increase()}"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_expressMainViewModel_layout"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/main_introductionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/main_introductionText"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/main_image"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_gravity="center"
                android:contentDescription="@string/background_picture"
                android:src="@mipmap/my_map_diary_bg" />
        </LinearLayout>
    </RelativeLayout>
</layout>